--- a/.gitconfig
+++ b/.gitconfig
@@ -10,9 +10,9 @@
 
 [user]
         # The name you want to appear as the author of your commits
-        name = <YOUR NAME>
+        name = Willson Wang
 	# The e-mail address that is associated to the author of your commits
-        email = <YOUR EMAIL>
+        email = willson.wang@datadoghq.com
 # This next section is optional and can be omitted if you do not use ssh git
 # commit signing.  However, doing so is highly encouraged, and if you have not
 # started using this workflow, see the onboarding docs for that:
