--- a/install.sh.example
+++ b/install.sh.example
@@ -25,3 +25,9 @@ while read df; do
   mkdir -p "$(dirname "$link")"
   ln -sf "$df" "$link"
 done
+
+sudo apt-get update
+sudo apt-get install -y rsync silversearcher-ag
+curl -L https://binaries.ddbuild.io/service-discovery-platform/fabric_1.117.1_linux_amd64.tar.gz -o fabric.tgz && tar -xvf fabric.tgz && mv ./fabric $HOME/.local/bin
+cp $DOTFILES_PATH/git-pre-commit ~/dd/dd-source/.git/hooks/;
+touch $HOME/.dotfiles_installed
